php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #60718 pgsql extension no longer compiles
Submitted: 2012-01-11 17:32 UTC Modified: 2012-03-30 00:46 UTC
From: long at ku dot edu Assigned: yohgaki (profile)
Status: Closed Package: Compile Failure
PHP Version: 5.3.9 OS: Red Hat Enterprise Linux AS rele
Private report: No CVE-ID: None
 [2012-01-11 17:32 UTC] long at ku dot edu
Description:
------------
Somewhere between 5.3.6 and 5.3.9 the pgsql extension lost the ability to be compiled on systems using older versions of postgresql.  Here is my configure line:

#! /bin/sh
#
# Created by configure

CFLAGS='-O3' \
CXXFLAGS='-O3' \
LIBS='-lssl -lncurses' \
'./configure' \
'--enable-discard-path' \
'--with-openssl=shared' \
'--with-zlib=shared' \
'--enable-bcmath' \
'--with-bz2=shared' \
'--enable-calendar' \
'--with-curl=shared' \
'--enable-dba=shared' \
'--with-gdbm=shared' \
'--with-db4=shared' \
'--enable-dbase' \
'--enable-exif' \
'--enable-ftp' \
'--with-gd=shared' \
'--enable-gd-native-ttf' \
'--enable-gd-jis-conv' \
'--with-gettext=shared' \
'--with-gmp=shared' \
'--with-imap=shared' \
'--with-kerberos' \
'--with-imap-ssl' \
'--with-ldap' \
'--enable-mbstring' \
'--with-mysql=/usr' \
'--with-ncurses=shared' \
'--with-oci8' \
'--with-pspell=shared' \
'--with-readline=shared' \
'--enable-shmop' \
'--with-snmp=shared' \
'--enable-sockets' \
'--with-sqlite=shared' \
'--enable-sysvmsg' \
'--enable-sysvsem' \
'--enable-sysvshm' \
'--enable-wddx' \
'--with-freetype-dir' \
'--with-jpeg-dir' \
'--with-xpm-dir' \
'--with-apxs2=/usr/local/apache/bin/apxs' \
'--with-mysqli' \
'--enable-pdo=shared' \
'--with-pdo-mysql=shared' \
'--with-pdo-oci=shared' \
'--with-pdo-sqlite=shared' \
'--with-tidy' \
'--enable-soap=shared' \
'--enable-zip' \
'--with-pgsql' \
"$@"

When I run make I get:

/bin/sh /home/long/src/php-5.3.9-ap2/libtool --silent --preserve-dup-deps --mode=compile gcc  -Iext/pgsql/ -I/home/long/src/php-5.3.9-ap2/ext/pgsql/ -DPHP_ATOM_INC -I/home/long/src/php-5.3.9-ap2/include -I/home/long/src/php-5.3.9-ap2/main -I/home/long/src/php-5.3.9-ap2 -I/home/long/src/php-5.3.9-ap2/ext/date/lib -I/home/long/src/php-5.3.9-ap2/ext/ereg/regex -I/usr/local/include/libxml2 -I/usr/kerberos/include -I/usr/X11R6/include -I/usr/include/freetype2 -I/usr/include/imap -I/home/long/src/php-5.3.9-ap2/ext/mbstring/oniguruma -I/home/long/src/php-5.3.9-ap2/ext/mbstring/libmbfl -I/home/long/src/php-5.3.9-ap2/ext/mbstring/libmbfl/mbfl -I/usr/include/mysql -I/apps/oracle/OraHome1/rdbms/public -I/apps/oracle/OraHome1/rdbms/demo -I/home/long/src/php-5.3.9-ap2/ext/sqlite3/libsqlite -I/usr/include/pspell -I/usr/local/include -I/home/long/src/php-5.3.9-ap2/TSRM -I/home/long/src/php-5.3.9-ap2/Zend    -I/usr/include -O3  -prefer-non-pic -c /home/long/src/php-5.3.9-ap2/ext/pgsql/pgsql.c -o ext/pgsql/pgsql.lo 
/home/long/src/php-5.3.9-ap2/ext/pgsql/pgsql.c: In function `zif_pg_get_notify':
/home/long/src/php-5.3.9-ap2/ext/pgsql/pgsql.c:4810: structure has no member named `extra'
/home/long/src/php-5.3.9-ap2/ext/pgsql/pgsql.c:4821: structure has no member named `extra'
make: *** [ext/pgsql/pgsql.lo] Error 1
[long@wbtstap php-5.3.9-ap2]$ 


Test script:
---------------
n/a


Expected result:
----------------
pgsql extension should still compile


Actual result:
--------------
does not compile


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-01-11 17:43 UTC] pajoye@php.net
-Status: Open +Status: Feedback
 [2012-01-11 17:43 UTC] pajoye@php.net
Which version of the libpg do you have?
 [2012-01-11 17:44 UTC] long at ku dot edu
rh-postgresql-devel-7.3.21-3
 [2012-01-11 17:44 UTC] long at ku dot edu
-Status: Feedback +Status: Open
 [2012-03-29 11:07 UTC] yohgaki@ohgaki.net@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src.git;a=commit;h=8449e0ca89d77fb20ac3326a0cf574ae2d13676c
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 [2012-03-29 11:07 UTC] yohgaki@ohgaki.net@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src.git;a=commit;h=931831bf75d645bdb9f079793b0224bb4843a7a3
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 [2012-03-29 11:07 UTC] yohgaki@php.net
-Status: Open +Status: Assigned -Assigned To: +Assigned To: yohgaki
 [2012-03-29 11:07 UTC] yohgaki@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.

It's an unsupported version, but I'll look into.
 [2012-03-29 13:35 UTC] yohgaki@ohgaki.net@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src.git;a=commit;h=8449e0ca89d77fb20ac3326a0cf574ae2d13676c
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 [2012-03-30 00:46 UTC] yohgaki@php.net
-Status: Assigned +Status: Closed
 [2012-03-30 00:46 UTC] yohgaki@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-12 09:38 UTC] johannes@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src.git;a=commit;h=aa45b5405e472eda27067c0abcc2f7065337baee
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 [2014-10-07 23:27 UTC] stas@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=8449e0ca89d77fb20ac3326a0cf574ae2d13676c
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 [2014-10-07 23:27 UTC] stas@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=931831bf75d645bdb9f079793b0224bb4843a7a3
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 [2014-10-07 23:38 UTC] stas@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=8449e0ca89d77fb20ac3326a0cf574ae2d13676c
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 [2014-10-07 23:38 UTC] stas@php.net
Automatic comment on behalf of yohgaki@ohgaki.net
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=931831bf75d645bdb9f079793b0224bb4843a7a3
Log: Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC