Fixed bug #60718 Complie problem with libpq (PostgreSQL 7.3 or less)